tests/fixtures/invalid/pow_none_bool_dict.py
# Cannot call pow() with None, Bool, Dict[str, int]
x = pow(None, True, {"a": 1})
